--- a/src/popup/index.html
+++ b/src/popup/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Popup</title>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="../assets/vue.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Popup</title>
 </head>
 
 <body>
-  <div id="app"></div>
-  <script type="module" src="./main.ts"></script>
+    <div id="app"></div>
+    <script type="module" src="./main.ts"></script>
 </body>
 
 </html>
